// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.gitsync;

import "google/protobuf/wrappers.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_detail.proto";
import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_scope_info.proto";
import "io/harness/gitsync/change_type.proto";
import "980-commons/src/main/proto/io/harness/security/principal.proto";

option java_multiple_files = true;

service HarnessToGitPushInfoService {
  rpc pushFromHarness(PushInfo) returns (PushResponse);
  rpc pushFile(FileInfo) returns (PushFileResponse);
  rpc isGitSyncEnabledForScope(io.harness.eventsframework.schemas.entity.EntityScopeInfo) returns (IsGitSyncEnabled);
  rpc getDefaultBranch(RepoDetails) returns (BranchDetails);
}

message PushInfo {
  string commit_id = 1;
  string file_path = 2;
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO entity_detail = 3;
  string account_id = 4;
  string yaml_git_config_id = 5;
  bool is_new_branch = 6;
  string branch_name = 7;
  string folder_path = 8;
  map<string, string> context_map = 9;
  bool is_sync_from_git = 10;
}

message PushResponse {
  bool status = 1;
}

message FileInfo {
  string file_path = 1;
  string yaml_git_config_id = 2;
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO entity_detail = 3;
  string account_id = 4;
  string branch = 5;
  bool is_new_branch = 6;
  google.protobuf.StringValue base_branch = 7;
  string folder_path = 8;
  io.harness.security.Principal principal = 9;
  map<string, string> context_map = 10;
  string yaml = 11;
  io.harness.gitsync.ChangeType change_type = 12;
  google.protobuf.StringValue commit_msg = 13;
  google.protobuf.StringValue old_file_sha = 14;
  bool is_full_sync_flow = 15;
}

message PushFileResponse {
  // failed = 0; success = 1
  int32 status = 1;
  bool is_default = 2;
  string account_id = 3;
  string defaultBranchName = 4;
  string error = 5;
  int32 scm_response_code = 6;
  string commit_id = 7;
}

message IsGitSyncEnabled {
  bool enabled = 1;
}

message RepoDetails {
  string yaml_git_config_id = 1;
  string account_id = 2;
  google.protobuf.StringValue org_identifier = 3;
  google.protobuf.StringValue project_identifier = 4;
  map<string, string> context_map = 5;
}

message BranchDetails {
  string default_branch = 1;
}
